# RAG-Project

./: .gitignore  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb
0-DataIngestParsing/data/text_files/: python_intro.txt  python_intro_2.txt
2-VectorStores/: 1-chromadb.ipynb
2-VectorStores/data/: doc_0.txt  doc_1.txt  doc_2.txt
